# OpenALRecorder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: OpenALDevice.h  OpenALRecorder.h
source/: OpenALDevice.cpp  OpenALRecorder.cpp  main.cpp
